--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <header class="header">
+        <div class="container">
         <nav class="nav">
             <a href="./index.html" class="nav-logo">Web<span>Studio</span></a>
             <ul class="nav-list">
@@ -30,118 +31,129 @@
                 <li><a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+        </div>
     </header>
 
     <main class="main-content">
         <section class="hero">
-            <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button type="button" class="hero-button">Order Service</button>
+            <div class="container">
+                <h1 class="hero-title">Effective Solutions for Your Business</h1>
+                <button type="button" class="hero-button">Order Service</button>
+            </div>
         </section>
 
         <section class="features">
-            <h2 class="section-title">Features</h2>
-            <ul class="features-list">
-                <li>
-                    <h3 class="feature-title">Strategy</h3>
-                    <p class="feature-description">
-                        Our goal is to identify the business problem to walk away with the perfect and creative
-                        solution.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="feature-title">Punctuality</h3>
-                    <p class="feature-description">
-                        Bring the key message to the brand's audience for the best price
-                        within the shortest possible time.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="feature-title">Diligence</h3>
-                    <p class="feature-description">
-                        Research and confirm brands with the strongest digital growth opportunities
-                        and minimize risk.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="feature-title">Technologies</h3>
-                    <p class="feature-description">
-                        Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.
-                    </p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="section-title">Features</h2>
+                <ul class="features-list">
+                    <li>
+                        <h3 class="feature-title">Strategy</h3>
+                        <p class="feature-description">
+                            Our goal is to identify the business problem to walk away with the perfect and creative
+                            solution.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="feature-title">Punctuality</h3>
+                        <p class="feature-description">
+                            Bring the key message to the brand's audience for the best price
+                            within the shortest possible time.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="feature-title">Diligence</h3>
+                        <p class="feature-description">
+                            Research and confirm brands with the strongest digital growth opportunities
+                            and minimize risk.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="feature-title">Technologies</h3>
+                        <p class="feature-description">
+                            Design practice focused on digital experiences. We bring forth a deep passion for
+                            problem-solving.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <section class="team">
-            <h2 class="section-title">Our Team</h2>
-            <ul>
-                <li class="team-list">
-                    <img src="./images/mark-guerrero.jpg" alt="photo Mark Guerrero" class="team-photo">
-                    <h3 class="team-member-name">Mark Guerrero</h3>
-                    <p class="team-member-role">Product Designer</p>
-                </li>
-                <li class="team-list">
-                    <img src="./images/tom-ford.jpg" alt="photo Tom Ford" class="team-photo">
-                    <h3 class="team-member-name">Tom Ford</h3>
-                    <p class="team-member-role">Frontend Developer</p>
-                </li>
-                <li class="team-list">
-                    <img src="./images/camila-garcia.jpg" alt="photo Camila Garcia" class="team-photo">
-                    <h3 class="team-member-name">Camila Garcia</h3>
-                    <p class="team-member-role">Marketing</p>
-                </li>
-                <li class="team-list">
-                    <img src="./images/daniel-wilson.jpg" alt="photo Daniel Wilson" class="team-photo">
-                    <h3 class="team-member-name">Daniel Wilson</h3>
-                    <p class="team-member-role">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="section-title">Our Team</h2>
+                <ul>
+                    <li class="team-list">
+                        <img src="./images/mark-guerrero.jpg" alt="photo Mark Guerrero" class="team-photo">
+                        <h3 class="team-member-name">Mark Guerrero</h3>
+                        <p class="team-member-role">Product Designer</p>
+                    </li>
+                    <li class="team-list">
+                        <img src="./images/tom-ford.jpg" alt="photo Tom Ford" class="team-photo">
+                        <h3 class="team-member-name">Tom Ford</h3>
+                        <p class="team-member-role">Frontend Developer</p>
+                    </li>
+                    <li class="team-list">
+                        <img src="./images/camila-garcia.jpg" alt="photo Camila Garcia" class="team-photo">
+                        <h3 class="team-member-name">Camila Garcia</h3>
+                        <p class="team-member-role">Marketing</p>
+                    </li>
+                    <li class="team-list">
+                        <img src="./images/daniel-wilson.jpg" alt="photo Daniel Wilson" class="team-photo">
+                        <h3 class="team-member-name">Daniel Wilson</h3>
+                        <p class="team-member-role">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <section class="portfolio">
-            <h2 class="section-title">Our Portfolio</h2>
-            <ul class="portfolio-list">
-                <li>
-                    <img src="./images/portf01.jpg" alt="photo Banking App" class="portfolio-photo" width="360">
-                    <h3 class="portfolio-item-title">Banking App</h3>
-                    <p class="portfolio-item-category">App</p>
-                </li>
-                <li>
-                    <img src="./images/portf02.jpg" alt="photo Cashless Payment" class="portfolio-photo" width="360">
-                    <h3 class="portfolio-item-title">Cashless Payment</h3>
-                    <p class="portfolio-item-category">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/portf03.jpg" alt="App" class="portfolio-photo" width="360">
-                    <h3 class="portfolio-item-title">Meditation App</h3>
-                    <p class="portfolio-item-category">App</p>
-                </li>
-                <li>
-                    <img src="./images/portf04.jpg" alt="photo Taxi Service" class="portfolio-photo" width="360">
-                    <h3 class="portfolio-item-title">Taxi Service</h3>
-                    <p class="portfolio-item-category">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/portf05.jpg" alt="photo Screen Illustrations" class="portfolio-photo"
-                        width="360">
-                    <h3 class="portfolio-item-title">Screen Illustrations</h3>
-                    <p class="portfolio-item-category">Design</p>
-                </li>
-                <li>
-                    <img src="./images/portf06.jpg" alt="photo Online Courses" class="portfolio-photo" width="360">
-                    <h3 class="portfolio-item-title">Online Courses</h3>
-                    <p class="portfolio-item-category">Marketing</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="section-title">Our Portfolio</h2>
+                <ul class="portfolio-list">
+                    <li>
+                        <img src="./images/portf01.jpg" alt="photo Banking App" class="portfolio-photo" width="360">
+                        <h3 class="portfolio-item-title">Banking App</h3>
+                        <p class="portfolio-item-category">App</p>
+                    </li>
+                    <li>
+                        <img src="./images/portf02.jpg" alt="photo Cashless Payment" class="portfolio-photo" width="360">
+                        <h3 class="portfolio-item-title">Cashless Payment</h3>
+                        <p class="portfolio-item-category">Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./images/portf03.jpg" alt="App" class="portfolio-photo" width="360">
+                        <h3 class="portfolio-item-title">Meditation App</h3>
+                        <p class="portfolio-item-category">App</p>
+                    </li>
+                    <li>
+                        <img src="./images/portf04.jpg" alt="photo Taxi Service" class="portfolio-photo" width="360">
+                        <h3 class="portfolio-item-title">Taxi Service</h3>
+                        <p class="portfolio-item-category">Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./images/portf05.jpg" alt="photo Screen Illustrations" class="portfolio-photo"
+                            width="360">
+                        <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                        <p class="portfolio-item-category">Design</p>
+                    </li>
+                    <li>
+                        <img src="./images/portf06.jpg" alt="photo Online Courses" class="portfolio-photo" width="360">
+                        <h3 class="portfolio-item-title">Online Courses</h3>
+                        <p class="portfolio-item-category">Marketing</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="footer-logo">Web<span class="footer-logo-span">Studio</span></a>
-        <p class="footer-text">
-            Increase the flow of customers and sales for your business with digital marketing & growth
-            solutions.
-        </p>
+        <div class="container">
+            <a href="./index.html" class="footer-logo">Web<span class="footer-logo-span">Studio</span></a>
+            <p class="footer-text">
+                Increase the flow of customers and sales for your business with digital marketing & growth
+                solutions.
+            </p>
+        </div>
     </footer>
 </body>
 
